--- a/faqs.html
+++ b/faqs.html
@@ -43,7 +43,7 @@
                     Craft Studio</a>
                 <ul class="navbar-nav mx-auto mt-2  mt-lg-0" style="font-size: 1rem;">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: rgb(0, 0, 0)" href="home.html">Home
+                        <a class="nav-link" style="color: rgb(0, 0, 0)" href="index.html">Home
                             <span class="sr-only">(current)</span></a>
                     </li>
                     <div class="dropdown">
@@ -284,7 +284,7 @@
          style="background-color:#986D4C"
          >
       © 2020 Copyright:
-      <a class="text-light" href="home.html"
+      <a class="text-light" href="index.html"
          >CRAFT STUDIO</a
         >
     </div>
